--- a/Js/JavaScript Drum Kit/index.html
+++ b/Js/JavaScript Drum Kit/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>JS Drum Kit</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-
   <div class="keys">
+    <h1>Press the following keys on your keyboard to get sound</h1>
     <div data-key="65" class="key">
       <kbd>A</kbd>
       <span class="sound">clap</span>
@@ -58,24 +60,25 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-  function removeTransition(e) {
-    if (e.propertyName !== 'transform') return;
-    e.target.classList.remove('playing');
-  }
+  const plays = document.querySelectorAll('.key');
 
-  function playSound(e) {
+  function playSound(e){
     const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
-    const key = document.querySelector(`div[data-key="${e.keyCode}"]`);
-    if (!audio) return;
-
-    key.classList.add('playing');
-    audio.currentTime = 0;
+    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+    if(!audio) return; // stop the function from running all together
+    audio.currentTime = 0; // rewind to the start
     audio.play();
+    key.classList.add('playing');
+    key.addEventListener('transitionend', removeTransition);
   }
 
-  const keys = Array.from(document.querySelectorAll('.key'));
-  keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+  function removeTransition(e){
+    if(e.propertyName !== 'transform') return; // skip it if it's not a transform
+    this.classList.remove('playing');
+  }
+  // plays.forEach(play => play.addEventListener('click', playSound));
   window.addEventListener('keydown', playSound);
+
 </script>
 
 
